
2018-10-21    <kennethj@gagarin.uit.no>
    * generate_kurs_ldif.py:  updated to read utf-8 instead of iso-8859-1

2018-10-21    <kennethj@gagarin.uit.no>
    * import_tlf.py:  updated to write utf-8 encoded strings to FS

2018-10-21    <kennethj@gagarin.uit.no>
    * update_displayname.py:  updated to write utf-8 encoded strings to FS

2018-10-21    <kennethj@gagarin.uit.no>
    * wipe.py:  updated to handle json format in changelog instead of pickle

2018-10-21    <kennethj@gagarin.uit.no>
    * import_SYSX.py: updated to handle ou file on utf-8 format

2018-10-21    <kennethj@gagarin.uit.no>
    * import_sito.py: updated to handle ou file on utf-8 format


2018-10-21    <kennethj@gagarin.uit.no>
    * generate_paga_persons.py Updated to handle UTF-8 from FS

2018-10-21    <kennethj@gagarin.uit.no>
    * import_PAGA.py Updated to handle UTF-8 from FS

2018-10-20    <kennethj@gagarin.uit.no>
    * merge_xml_files.py Updated to handle UTF-8 from FS
2018-10-20    <kennethj@gagarin.uit.no>
    * import_FS.py      updated to handle UTF-8 from FS.

2018-10-18    <kennethj@gagarin.uit.no>
    * generate_OU.py	Updated to handle UTF-8 from FS
2018-09-13    <cerebrum@gagarin.uit.no>
    * import_PAGA.py    We cannot import persons from paga where the last 5 digits are set to 00000 (non-norwegians missing propper fnr).
                        There are 2 reasons for this. 1: the resulting 11 digit fnr is not unique. 2: In some cases giving an existing username to a returning user, will give the wrong username. in reallity the username 
                        returned actually belongs to someone else.
2018-08-16    <cerebrum@gagarin.uit.no>
    * process_uit_email.py (get_existing_email) rewrote how we collect already existing email addresses.
            The previous version was bloated and took too much time. The new version collects existing email addresses